import { proto, replicas } from "./leader";
import { leaderState } from "./leader-state";
import * as grpc from "@grpc/grpc-js";

export function replicateToReplicas(entry: any): Promise<number> {
  console.log(
    `[Leader] Iniciando replica√ß√£o para entrada: epoch=${entry.epoch}, offset=${entry.offset}, key=${entry.key}`
  );

  const promises: Promise<boolean>[] = [];

  replicas.forEach((replica) => {
    const promise = new Promise<boolean>((resolve) => {
      replicateToSingleReplica(replica, entry, resolve);
    });
    promises.push(promise);
  });

  return Promise.all(promises).then((results) => {
    const ackCount = results.filter((success) => success).length;
    console.log(
      `[Leader] Resultado final da replica√ß√£o: ${ackCount}/${replicas.length} ACKs recebidos`
    );
    return ackCount;
  });
}

// Fun√ß√£o auxiliar para replicar para uma √∫nica r√©plica com retry autom√°tico
function replicateToSingleReplica(
  replica: any,
  entry: any,
  resolve: (success: boolean) => void,
  attempt: number = 1,
  alreadySynced: boolean = false
) {
  const maxAttempts = 3;

  console.log(
    `[Leader] Tentativa ${attempt}/${maxAttempts} para r√©plica ${replica.address}`
  );

  const client = new proto.replication.ReplicaService(
    replica.address,
    grpc.credentials.createInsecure()
  );

  // Set proper deadline as Date object
  const deadline = new Date();
  deadline.setSeconds(deadline.getSeconds() + 5);

  client.ReplicateLogEntry(entry, { deadline }, (err: any, res: any) => {
    if (err) {
      console.log(
        `[Leader] ‚ùå Erro de conex√£o com ${replica.address} (tentativa ${attempt}): ${err.message}`
      );
      console.log(
        `[Leader] üîç C√≥digo do erro: ${err.code}, Detalhes: ${
          err.details || "N/A"
        }`
      );

      if (attempt < maxAttempts && (err.code === 14 || err.code === 4)) {
        // UNAVAILABLE or DEADLINE_EXCEEDED
        console.log(`[Leader] üîÅ Tentando novamente em 1 segundo...`);
        setTimeout(() => {
          replicateToSingleReplica(
            replica,
            entry,
            resolve,
            attempt + 1,
            alreadySynced
          );
        }, 1000);
      } else {
        console.log(
          `[Leader] ‚ùå Desistindo da r√©plica ${replica.address} ap√≥s ${attempt} tentativas`
        );
        return resolve(false);
      }
      return;
    }

    if (res.success) {
      console.log(
        `[Leader] ‚úÖ ACK recebido de ${replica.address} na tentativa ${attempt}`
      );
      return resolve(true);
    }

    if (!res.success && res.currentState) {
      console.log(
        `[Leader] üîÑ R√©plica ${replica.address} inconsistente na tentativa ${attempt}. Sincronizando...`
      );

      // Se j√° tentamos sincronizar antes, n√£o tentar novamente para evitar loop infinito
      if (alreadySynced) {
        console.log(
          `[Leader] ‚ùå R√©plica ${replica.address} j√° foi sincronizada mas ainda est√° inconsistente. Desistindo.`
        );
        return resolve(false);
      }

      syncReplica(replica, res.currentState)
        .then(() => {
          console.log(
            `[Leader] ‚úÖ Sincroniza√ß√£o conclu√≠da para ${replica.address}`
          );

          // Verificar se a entrada atual j√° foi inclu√≠da na sincroniza√ß√£o
          const entryAlreadySynced = res.currentState.lastOffset < entry.offset;

          if (entryAlreadySynced) {
            // A entrada atual foi inclu√≠da na sincroniza√ß√£o, considerar como sucesso
            console.log(
              `[Leader] ‚úÖ Entrada j√° sincronizada para ${replica.address}, considerando como ACK`
            );
            return resolve(true);
          } else {
            // A entrada n√£o foi inclu√≠da na sincroniza√ß√£o, tentar replica√ß√£o novamente
            console.log(
              `[Leader] üîÅ Tentando replica√ß√£o novamente ap√≥s sincroniza√ß√£o para ${replica.address}`
            );
            setTimeout(() => {
              replicateToSingleReplica(replica, entry, resolve, 1, true); // Reset attempt counter to 1, mark as already synced
            }, 100); // Pequeno delay para garantir que a sincroniza√ß√£o foi processada
          }
        })
        .catch((syncErr) => {
          console.log(
            `[Leader] ‚ùå Erro na sincroniza√ß√£o de ${replica.address}:`,
            syncErr.message
          );
          resolve(false);
        });
    } else {
      console.log(
        `[Leader] ‚ùå Falha na r√©plica ${replica.address}:`,
        res.message
      );
      resolve(false);
    }
  });
}

// Fun√ß√£o para sincronizar uma r√©plica espec√≠fica
async function syncReplica(replica: any, replicaState: any): Promise<void> {
  return new Promise((resolve, reject) => {
    const client = new proto.replication.ReplicaService(
      replica.address,
      grpc.credentials.createInsecure()
    );

    console.log(`[Leader] Sincronizando r√©plica ${replica.address}`);
    console.log(
      `[Leader] Estado da r√©plica: lastEpoch=${replicaState.lastEpoch}, lastOffset=${replicaState.lastOffset}`
    );
    const log = leaderState.getLog();
    console.log(`[Leader] Log do l√≠der: ${log.length} entradas`);

    // Determinar quais entradas enviar
    const startOffset = replicaState.lastOffset + 1;
    const entriesToSync = leaderState.filterEntriesFromOffset(startOffset);

    console.log(
      `[Leader] Entradas a sincronizar: ${entriesToSync.length} (a partir do offset ${startOffset})`
    );

    if (entriesToSync.length === 0) {
      console.log(`[Leader] R√©plica ${replica.address} j√° est√° sincronizada`);
      return resolve();
    }

    console.log(`[Leader] Enviando entradas:`);
    entriesToSync.forEach((entry, index) => {
      console.log(
        `[Leader]   ${index + 1}/${entriesToSync.length}: epoch=${
          entry.epoch
        }, offset=${entry.offset}, key=${entry.key}`
      );
    });

    const syncRequest = {
      entries: entriesToSync,
      startOffset: startOffset,
    };

    // Set timeout for sync operation
    const deadline = new Date();
    deadline.setSeconds(deadline.getSeconds() + 10); // Longer timeout for sync

    client.SyncLog(syncRequest, { deadline }, (err: any, res: any) => {
      if (!err && res.success) {
        console.log(`[Leader] Sincroniza√ß√£o conclu√≠da para ${replica.address}`);
        resolve();
      } else {
        console.log(
          `[Leader] Erro na sincroniza√ß√£o de ${replica.address}:`,
          err ? err.message : res.message
        );
        reject(err || new Error(res.message));
      }
    });
  });
}

export function commitToReplicas(entry: any) {
  console.log(
    `[Leader] Enviando comando de commit para as r√©plicas: epoch=${entry.epoch}, offset=${entry.offset}, key=${entry.key}`
  );

  replicas.forEach((replica) => {
    const client = new proto.replication.ReplicaService(
      replica.address,
      grpc.credentials.createInsecure()
    );
    client.CommitEntry(entry, (err: any, res: any) => {
      if (!err && res && res.success) {
        console.log(`[Leader] Commit confirmado por ${replica.address}`);
      } else {
        console.log(
          `[Leader] Erro no commit em ${replica.address}:`,
          err || (res && res.message)
        );
      }
    });
  });
}
